--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,48 @@
 {
-  "short_name": "bac-a-lettre",
-  "name": "Bac à lettre",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+    "dir": "ltr",
+    "lang": "en",
+    "short_name": "bac-a-lettre",
+    "name": "Bac à lettre",
+    "description": "Random character generator for game Baccalauréat",
+    "scope": "/",
+    "start_url": ".",
+    "theme_color": "#282c34",
+    "background_color": "#282c34",
+    "display": "standalone",
+    "orientation": "any",
+    "related_applications": [],
+    "prefer_related_applications": false,
+    "icons": [{
+        "src": "favicon.ico",
+        "sizes": "64x64 32x32 24x24 16x16",
+        "type": "image/x-icon"
+      }, {
+        "src": "./assets/img/logo16.png",
+        "sizes": "16x16",
+        "type": "image/png"
+      }, {
+        "src": "./assets/img/logo32.png",
+        "sizes": "32x32",
+        "type": "image/png"
+      }, {
+        "src": "./assets/img/logo64.png",
+        "sizes": "64x64",
+        "type": "image/png"
+      }, {
+        "src": "./assets/img/logo128.png",
+        "sizes": "128x128",
+        "type": "image/png"
+      }, {
+        "src": "./assets/img/logo256.png",
+        "sizes": "192x192",
+        "type": "image/png"
+      }, {
+        "src": "./assets/img/logo256.png",
+        "sizes": "256x256",
+        "type": "image/png"
+      }, {
+        "src": "./assets/img/logo512.png",
+        "sizes": "512x512",
+        "type": "image/png"
+      }]
 }
